--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,7 @@
 
         <!-- Header Bar -->
         <ion-header-bar class="bar-calm">
-          <h1 class="title">Fonte da Vida {{appVersion}}</h1>
+          <h1 class="title">{{'APP_NAME' | translate}} {{appVersion}}</h1>
         </ion-header-bar>
         <ion-content>
           <ion-list>
