--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/ngStorage.min.js"></script> 
     <script src="js/ng-FitText.min.js"></script> 
     <script src="js/loading-bar.min.js"></script> 
+    <script src="js/ion-wizard.js"></script>
     
     
     <script src="lib/videogular/videogular.js"></script>
