working commit for version 3.6.6

--- a/www/index.html
+++ b/www/index.html
@@ -146,6 +146,13 @@
                 <i class="icon ion-arrow-right-c"></i>
               </a>
 
+              <a class="item item-icon-left item-icon-right settings-sections" menu-toggle="left" href="#/tab/dash" ng-click="previous()">
+                <i class="icon ion-earth"></i>
+                {{'COUNTRY' | translate}}
+                <i class="icon ion-arrow-right-c"></i>
+              </a>
+
+
             <!-- Get Involved -->
             <div class="item item-divider item-icon-left settings-list">
               <i class = "icon ion-person-add"></i>
